test/classes/delete-free/tests-from-design-overview/borrowed-arguments.good
borrowed-arguments.chpl:12: In function 'saveit':
borrowed-arguments.chpl:14: error: 'delete' can only be applied to unmanaged classes
